# nicar23-money

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
nicar23_money/: summarizer.py
